# sync-notifications-hybrid

./: .gitignore  README.md  calendar_notifier.py  pyproject.toml
Notifier/: Notifier.csproj  README.md  notify.cs
cli_scripts/: format.sh  test.sh
tests/: test_calendar_notifier.py
